--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nmea-parser"
-version = "0.10.0"
+version = "0.10.0-gga-timestamp-fractions"
 publish = true
 description = "NMEA 0183 parser for AIS and GNSS sentences"
 authors = ["Timo Saarinen <zaari@mailbox.org>"]
